--- a/OtoTamir.WEBUI/Views/Shared/Components/_EditServiceRecordViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_EditServiceRecordViewComponentPartial/Default.cshtml
@@ -12,7 +12,8 @@
     <div class="modal-body">
         <input type="hidden" asp-for="SymptomId" />
         <input type="hidden" asp-for="ReturnUrl" />
-        <input type="hidden" name="AuthorName" value="@User.Identity.Name" /> <div class="row g-3 mb-3">
+
+        
             <div class="col-md-12">
                 <label asp-for="Status" class="form-label fw-bold">Semptom Durumu</label>
                 <select asp-for="Status" class="form-select symptom-status-selector"
@@ -87,13 +88,27 @@
                 </div>
             </div>
         </div>
-    </div>
+    
 
-    <div class="modal-footer bg-light">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">İptal</button>
-        <button type="submit" class="btn btn-warning shadow-sm">
-            <i class="bi bi-save me-1"></i> Kaydet ve Güncelle
-        </button>
+    <div class="modal-footer bg-light d-flex justify-content-between align-items-center">
+        <div class="input-group" style="max-width: 250px;">
+            <span class="input-group-text bg-white border-end-0"><i class="bi bi-person"></i></span>
+            <input class="form-control border-start-0 ps-0"
+                   placeholder="Personel Adı"
+                   required=""
+                   type="text"
+                   id="AuthorName"
+                   maxlength="15"
+                   name="AuthorName"
+                   value="">
+        </div>
+
+        <div>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">İptal</button>
+            <button type="submit" class="btn btn-warning shadow-sm text-dark">
+                <i class="bi bi-save me-1"></i> Kaydet
+            </button>
+        </div>
     </div>
 </form>
 
